tests/integration/seed/predictions/invalid/ner+classif3.jsonlines
{"uuid": "526ccc0c-ebab-4007-b0eb-acaf9efde625", "annotations": {"type": { "labels": [ {"value": "FOO", "proba": 0.8111111111 } ] }, "bboxes": { "entities": [ {"value": "bbox_name", "coords": [{"x": 0.2634146341463415, "y": 0.01707317073170732}, {"x": 0.4959349593495935, "y": 0.01951219512195122}, {"x": 0.4975609756097561, "y": 0.07926829268292683}, {"x": 0.26666666666666666, "y": 0.07682926829268293}] } ]} } }
